--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.13.6",
@@ -57,7 +58,9 @@
     "jira-dev-tool": "^1.6.59",
     "lint-staged": "^10.5.4",
     "prettier": "2.2.1",
-    "qs": "^6.10.1"
+    "qs": "^6.10.1",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0"
   },
   "husky": {
     "hooks": {
